Otimização de seo

--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -56,7 +56,7 @@
    
 }
 
-.button button{
+.button a{
     border: 0;
     padding: 10px;
     background-color: rgb(100, 11, 201);
@@ -67,7 +67,7 @@
     font-size: 18px;
 }
 
-.button button:hover {
+.button a:hover {
     background-color: rgb(132, 46, 230);
     box-shadow: 1px 3px 5px #9999;
 }
